--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,8 @@ langchain-openai==0.1.7
 pypdf==3.17.1
 python-dotenv==1.0.0
 faiss-cpu==1.7.4
-python-magic==0.4.27
-python-magic-bin==0.4.14
+python-magic
+python-magic-bin
 tiktoken>=0.7.0
 openai==1.55.3 
 httpx==0.27.2
